Lots of updates: WIP

--- a/data/tairos/artifacts.yml
+++ b/data/tairos/artifacts.yml
@@ -5,11 +5,11 @@
   :icon: "intricate-necklace"
   :border_color: "#b95"
   :line1: "<i>Free Action</i> - 2 Charges"
-  :line2: ""
-  :line3: "Deal 4 damage."
-  :line4: ""
-  :line5: ""
-  :line6: ""
+  :line2: "Target enemy suffers 3 damage."
+  :line3: "<i>once per turn</i>"
+  :line4: "<i>Free Action</i> - 3 Charges"
+  :line5: "ALL enemies suffer 2 damage."
+  :line6: "<i>once per turn</i>"
 -
   :deck: "Artifact"
   :title: "Rod of Healing"
@@ -17,11 +17,11 @@
   :icon: "winged-scepter"
   :border_color: "#b95"
   :line1: "<i>Free Action</i> - 2 Charges"
-  :line2: ""
-  :line3: "Restore 2 <b>Health</b>."
-  :line4: "<i>or</i>"
-  :line5: "Remove 1 status effect."
-  :line6: ""
+  :line2: "Choose 1:"
+  :line3: "- <b>Restore 2</b>"
+  :line4: "- Remove 1 status effect"
+  :line5: "<i>Free Action</i> - 3 Charges"
+  :line6: "<b>Refresh</b> ANY player deck."
 -
   :deck: "Artifact"
   :title: "Orb of the Seer"
@@ -36,28 +36,28 @@
   :line6: "in any order."
 -
   :deck: "Artifact"
-  :title: "Cloak of Recovery"
+  :title: "Belt of the Swift"
   :type: "Artifact"
   :icon: "cloak"
   :border_color: "#b95"
-  :line1: "<i>Passive</i>"
-  :line2: ""
-  :line3: "At the end of your <b>Draw Step</b>,"
-  :line4: "if you have one or fewer cards in"
-  :line5: "your hand, you may draw"
-  :line6: "one extra card."
+  :line1: "<i>Free Action</i> - 2 Charges"
+  :line2: "<b>Draw 1</i>"
+  :line3: "<i>Free Action</i> - 2 Charges"
+  :line4: "<b>Refresh</b> one of your decks."
+  :line5: ""
+  :line6: ""
 -
   :deck: "Artifact"
-  :title: "Lightning Crystal"
+  :title: "Storm Crystal"
   :type: "Artifact"
   :icon: "unstable-orb"
   :border_color: "#b95"
-  :line1: "<i>Passive</i>"
-  :line2: ""
-  :line3: "Whenever you draw a card"
-  :line4: "outside of your <b>Draw Step</b>,"
-  :line5: "deal 1 damage."
-  :line6: ""
+  :line1: "<i>Free Action</i> - 1 Charge"
+  :line2: "Your next attack ignores <b>Block</b>."
+  :line3: "<i>Passive</i>"
+  :line4: "When you draw one or more"
+  :line5: "cards outside of your <b>Draw Step</b>,"
+  :line6: "target enemy suffers 1 damage."
 -
   :deck: "Artifact"
   :title: "Token of Luck"
@@ -72,27 +72,27 @@
   :line6: "Discard the rest."
 -
   :deck: "Artifact"
-  :title: "Belt of the Swift"
+  :title: "Cloak of Recovery"
   :type: "Artifact"
   :icon: "black-belt"
   :border_color: "#b95"
-  :line1: "<i>Free Action</i> - 3 Charges"
-  :line2: "Refresh <i>any</i> player deck."
+  :line1: "<i>Free Action</i> - 4 Charges"
+  :line2: "<b>Refresh</b> ANY player deck."
   :line3: "You and the owner of the deck"
-  :line4: "may draw a card."
-  :line5: "<i>(You may draw two cards if</i>"
-  :line6: "<i>you are the owner.)</i>"
+  :line4: "<b>Draw 1</b>."
+  :line5: "If you are the owner,"
+  :line6: "<b>Draw 2</b> instead."
 -
   :deck: "Artifact"
   :title: "Tome of Tactics"
   :type: "Artifact"
   :icon: "enlightenment"
   :border_color: "#b95"
-  :line1: "<i>Action</i> - <b>X</b> Charges"
-  :line2: "<b>Draw X / 2</b>"
+  :line1: "<i>Free Action</i> - 1 Charge"
+  :line2: "<b>Draw 1</b> then <b>Discard 1</b>."
   :line3: "<i>Passive</i>"
-  :line4: "When you refresh a deck, you"
-  :line5: "may leave up to 5 cards in"
+  :line4: "When you <b>Refresh</b> a deck, you"
+  :line5: "may leave up to 4 cards in"
   :line6: "its discard pile."
 -
   :deck: "Artifact"
@@ -116,5 +116,5 @@
   :line2: "Give a card to another"
   :line3: "player or take a card"
   :line4: "from another player."
-  :line5: "(you must get permission)"
-  :line6: ""
+  :line5: "<i>Passive</i>"
+  :line6: "+1 max hand size"
