--- a/data/tairos/enemies.yml
+++ b/data/tairos/enemies.yml
@@ -7,9 +7,9 @@
   :border_color: "#444"
   :hp: "12"
   :attack: "4"
-  :line1: "Stun any player who takes 3 or"
-  :line2: "more damage from <i>Toxic Toad</i>"
-  :line3: "in a single round."
+  :line1: "When <i>Toxic Toad</i> is defeated,"
+  :line2: "the player it is engaged with"
+  :line3: "gains <b>Stun</b>."
   :line4: ""
 -
   :deck: "Enemy"
@@ -19,9 +19,9 @@
   :border_color: "#444"
   :hp: "12"
   :attack: "4"
-  :line1: "<b>Hunter</b>: Most cards in hand"
-  :line2: "<b>Engage</b>: Gain <b>Fatigue</b>"
-  :line3: ""
+  :line1: "<b>Block 1</b>"
+  :line2: "<b>Hunter</b>: Least cards in hand"
+  :line3: "<b>Engage</b>: Gain <b>Fatigue</b>"
   :line4: ""
 -
   :deck: "Enemy"
@@ -31,9 +31,9 @@
   :border_color: "#444"
   :hp: "10"
   :attack: "5"
-  :line1: "Cannot take more than 3"
-  :line2: "damage at a time."
-  :line3: ""
+  :line1: "<b>Block 3</b>"
+  :line2: "When <i>Armored Orc</i> is attacked,"
+  :line3: "the attacker suffers 1 damage."
   :line4: ""
 -
   :deck: "Enemy"
@@ -41,11 +41,11 @@
   :type: "Enemy"
   :icon: "ifrit"
   :border_color: "#444"
-  :hp: "12"
-  :attack: "4"
-  :line1: "<b>Encounter</b>: Deal 4 damage to"
-  :line2: "the player with the most <b>Health</b>."
-  :line3: "<b>Hunter</b>: Most <b>Health</b>"
+  :hp: "13"
+  :attack: "5"
+  :line1: "<b>Hunter</b>: Most <b>Health</b>"
+  :line2: "<b>Encounter</b>: The player with the"
+  :line3: "most <b>Health</b> suffers 3 damage."
   :line4: ""
 -
   :deck: "Enemy"
@@ -53,12 +53,12 @@
   :type: "Enemy"
   :icon: "spectre"
   :border_color: "#444"
-  :hp: "14"
+  :hp: "15"
   :attack: "???"
   :line1: "<b>Hunter</b>: Most cards in hand"
   :line2: "<i>Mana Wraith</i>'s ATK is equal to"
-  :line3: "its target's hand size"
-  :line4: "(minimum 3 ATK)."
+  :line3: "the number of cards in its"
+  :line4: "target's hand (minimum 3 ATK)."
 -
   :deck: "Enemy"
   :title: "Serpent Assassin"
@@ -67,25 +67,25 @@
   :border_color: "#444"
   :hp: "8"
   :attack: "6"
-  :line1: "<b>Encounter</b>: Stun the player"
-  :line2: "with the least <b>Health</b>."
-  :line3: "<b>Hunter</b>: Least <b>Health</b>"
-  :line4: ""
+  :line1: "<b>Hunter</b>: Least <b>Health</b>"
+  :line2: "<b>Encounter</b>: The player"
+  :line3: "with the least <b>Health</b>"
+  :line4: "gains <b>Stun</b>."
 -
   :deck: "Enemy"
   :title: "Noxious Beast"
   :type: "Enemy"
   :icon: "gooey-daemon"
   :border_color: "#444"
-  :hp: "16"
+  :hp: "14"
   :attack: "3"
-  :line1: "<i>Noxious Beast</i> inflicts <b>Fatigue</b>"
-  :line2: "on any player it damages."
-  :line3: ""
+  :line1: "<b>Block 1</b>"
+  :line2: "Any player damaged by"
+  :line3: "<i>Noxious Beast</i> gains <b>Fatigue</b>."
   :line4: ""
 -
   :deck: "Enemy"
-  :title: "Dementor"
+  :title: "Wraith"
   :type: "Enemy"
   :icon: "spark-spirit"
   :border_color: "#444"
@@ -101,12 +101,12 @@
   :type: "Enemy"
   :icon: "battle-axe" # TODO
   :border_color: "#444"
-  :hp: "18"
-  :attack: "2"
-  :line1: "Other enemies cannot be attacked"
-  :line2: "while <i>Black Gaurd</i> is alive."
-  :line3: ""
-  :line4: ""
+  :hp: "15"
+  :attack: "3"
+  :line1: "<b>Block 2</b>"
+  :line2: "Other enemies cannot be"
+  :line3: "attacked while <b>Black Guard</b>"
+  :line4: "is alive."
 -
   :deck: "Enemy"
   :title: "Flamespitter"
@@ -115,8 +115,8 @@
   :border_color: "#444"
   :hp: "12"
   :attack: "2"
-  :line1: "When <i>Flamespitter</i> attacks,"
-  :line2: "deal 1 damage to ALL players."
+  :line1: "After <i>Flamespitter</i> attacks,"
+  :line2: "ALL players suffer 1 damage."
   :line3: ""
   :line4: ""
 -
@@ -125,46 +125,58 @@
   :type: "Enemy"
   :icon: "battle-axe" # TODO
   :border_color: "#444"
-  :hp: "12"
+  :hp: "10"
   :attack: "4"
-  :line1: "<i>Voidling</i> can only be"
-  :line2: "damaged by the player who is"
-  :line3: "engaged with it."
-  :line4: ""
-# Greater Enemies
+  :line1: "Can only be damaged by the"
+  :line2: "player it's engaged with."
+  :line3: "When defeated, the player it's"
+  :line4: "engaged with gains <b>Fatigue</b>."
+# Elite Enemies
 -
   :deck: "Enemy"
   :title: "Fire Drake"
-  :type: "Greater Enemy"
+  :type: "Elite Enemy"
   :icon: "wyvern"
   :border_color: "#444"
   :hp: "20"
   :attack: "2"
-  :line1: "Cannot be engaged."
-  :line2: "Attacks ALL players."
-  :line3: ""
+  :line1: "<b>Block 1</b>"
+  :line2: "Cannot be engaged."
+  :line3: "Attacks ALL players at once."
   :line4: ""
 -
   :deck: "Enemy"
   :title: "Soul Reaper"
-  :type: "Greater Enemy"
+  :type: "Elite Enemy"
   :icon: "grim-reaper"
   :border_color: "#444"
   :hp: "20"
   :attack: "6"
-  :line1: "Whenever <i>Soul Reaper</i> deals"
-  :line2: "damage, it gains <b>Health</b> equal"
-  :line3: "to half of the damage dealt"
-  :line4: "(rounded up)."
+  :line1: "<b>Hunter</b>: Least <b>Health</b>"
+  :line2: "After <i>Soul Reaper</i> attacks,"
+  :line3: "it gains <b>Health</b> equal to"
+  :line4: "the damage it dealt."
 -
   :deck: "Enemy"
   :title: "Warlord"
-  :type: "Greater Enemy"
+  :type: "Elite Enemy"
   :icon: "battle-axe" # TODO
   :border_color: "#444"
   :hp: "20"
+  :attack: "4"
+  :line1: "ALL enemy attacks gain"
+  :line2: "<b>+2 Attack</b>."
+  :line3: "When <i>Warlord</i> is attacked,"
+  :line4: "the attacker suffers 1 damage."
+-
+  :deck: "Enemy"
+  :title: "Armored Bear"
+  :type: "Elite Enemy"
+  :icon: "battle-axe" # TODO
+  :border_color: "#444"
+  :hp: "22"
   :attack: "5"
-  :line1: "Other enemies have +1 ATK"
-  :line2: ""
-  :line3: ""
-  :line4: ""
+  :line1: "<b>Block 2</b>"
+  :line2: "Cannot be stunned."
+  :line3: "When <i>Armored Bear</i> attacks,"
+  :line4: "target must <b>Discard 1</b>."
