--- a/data/tairos/player_cards.yml
+++ b/data/tairos/player_cards.yml
@@ -72,9 +72,9 @@
   :line1: "<b>Draw 2</b>"
   :line2: "You may take another <b>Action</b>."
   :line3: "<i>once per round</i>"
-  :line4: ""
-  :line5: ""
-  :line6: ""
+  :line4: "<b>Combo</b>: <i>Sprint</i>"
+  :line5: "You may take an <i>additional</i>"
+  :line6: "action this round."
 
 # Elementalist - BLUE
 -
@@ -111,7 +111,7 @@
   :line2: "<b>Block 1</b> and <b>Attack 2</b>"
   :line3: "(target your attacker)"
   :line4: "<b>Combo</b>: <i>Conduct</i>"
-  :line5: "Charge this card and"
+  :line5: "<b>Charge</b> this card and"
   :line6: "the card you played with it."
 
 # Tactician - GREEN
@@ -121,12 +121,12 @@
   :type: "Action"
   :icon: "heart-plus"
   :border_color: "#492"
-  :line1: "<b>Restore Ally 1</b> twice"
-  :line2: "Remove one negative status"
-  :line3: "effect from an ally."
-  :line4: "<b>Combo</b>: <i>Prepare</i>"
-  :line5: "Refresh ANY player deck."
-  :line6: ""
+  :line1: "<b>Restore Ally 2</b> <i>multi-target</i>"
+  :line2: "Target ally may remove one"
+  :line3: "<b>Fatigue</b> or <b>Stun</b>."
+  :line4: "<b>Combo</b>: <i>Strengthen</i>"
+  :line5: "Target ally gains <b>+4 Attack</b>"
+  :line6: "on their next attack."
 -
   :deck: "Tactician"
   :title: "Inspire"
@@ -137,8 +137,8 @@
   :line2: "You may take another <b>Action</b>."
   :line3: "<i>once per round</i>"
   :line4: "<b>Combo</b>: <i>Rally</i>"
-  :line5: "Choose an ally to take an"
-  :line6: "extra turn this round."
+  :line5: "Target ally takes an extra"
+  :line6: "turn this round."
 -
   :deck: "Tactician"
   :title: "Coordinate"
@@ -150,7 +150,7 @@
   :line3: "(target the same enemy)"
   :line4: "If another ally attacked"
   :line5: "the target this round,"
-  :line6: "<b>+3 Attack</b>."
+  :line6: "<b>+2 Attack</b>."
 
 ## SET TWO
 
@@ -173,12 +173,12 @@
   :type: "Action"
   :icon: "punch-blast"
   :border_color: "#f31"
-  :line1: "<b>Attack 2</b> <i>Multi-target</i>"
-  :line2: "<b>Mill</b> up to 3 cards:"
-  :line3: "<b>+1 Attack</b> per card."
-  :line4: "<b>Combo</b>: Combo Finisher"
-  :line5: "<b>Mill</b> up to 2 more cards:"
-  :line6: "<b>+2 Attack</b> per card."
+  :line1: "<b>Attack 3</b> <i>Multi-target</i>"
+  :line2: "<b>Mill</b> up to 3 cards"
+  :line3: "to gain <b>+1 Attack</b> per card."
+  :line4: "<b>Combo</b>: <i>Finisher</i>"
+  :line5: "<b>Mill</b> up to 2 more cards"
+  :line6: "to gain <b>+2 Attack</b> per card."
 -
   :deck: "Brawler"
   :title: "Counter"
@@ -201,10 +201,10 @@
   :border_color: "#666"
   :line1: "<b>Attack 3</b>"
   :line2: "<b>Draw 1</b>"
-  :line3: "<b>Combo</b>: Syphon"
+  :line3: "If this defeats an enemy,"
   :line4: "<b>Restore Self 2</b>"
-  :line5: ""
-  :line6: ""
+  :line5: "<b>Combo</b>: <i>Venom</i>"
+  :line6: "<b>+3 Attack</b> and ignore <b>Block</b>"
 -
   :deck: "Shadow"
   :title: "Misdirect"
@@ -212,11 +212,11 @@
   :icon: "avoidance"
   :border_color: "#666"
   :line1: "Play when you are attacked."
-  :line2: "<b>Block 2</b>"
+  :line2: "<b>Block 1</b>"
   :line3: "<b>Attack 2</b>"
   :line4: "(target a different enemy)"
-  :line5: ""
-  :line6: ""
+  :line5: "<b>Combo</b>: <i>Redirect</i>"
+  :line6: "Swap places with an ally."
 -
   :deck" : "Shadow"
   :title: "Mimic"
@@ -224,7 +224,7 @@
   :icon: "two-shadows"
   :border_color: "#666"
   :line1: "While this card is in your hand,"
-  :line2: "treat it as if it were any card"
+  :line2: "treat it as if it were ANY card"
   :line3: "in an ally's hand."
   :line4: ""
   :line5: ""
@@ -238,10 +238,10 @@
   :icon: "hypersonic-bolt"
   :border_color: "#02f"
   :line1: "<b>Attack 4</b>"
-  :line2: ""
-  :line3: "<b>Combo</b>: <i>Channel</i>"
-  :line4: "<b>Draw 2</b>"
-  :line5: ""
+  :line2: "This attack ignores <b>Block</b>."
+  :line3: ""
+  :line4: "<b>Combo</b>: <i>Channel</i>"
+  :line5: "<b>Draw 2</b>"
   :line6: ""
 -
   :deck: "Arcanist"
@@ -251,10 +251,10 @@
   :border_color: "#02f"
   :line1: "Play when an enemy attacks."
   :line2: "<b>Block 2</b> <i>multi-target</i>"
-  :line3: "You may discard up to 2 cards:"
-  :line4: "<b>+2 Block</b> per card."
-  :line5: ""
-  :line6: ""
+  :line3: "You may discard up to 2 cards"
+  :line4: "to gain <b>+2 Block</b> per card."
+  :line5: "<b>Combo</b>: <i>Sacrifice</i>"
+  :line6: "Gain <b>Fatigue</b> and <b>+3 Block</b>."
 -
   :deck: "Arcanist"
   :title: "Unleash"
@@ -262,11 +262,11 @@
   :icon: "glowing-hands"
   :border_color: "#02f"
   :line1: "<b>Attack 2</b> <i>multi-target</i>"
-  :line2: "You may discard up to 2 cards:"
-  :line3: "<b>+3 Attack</b> per card."
-  :line4: "<b>Combo:</b> <i>Exhaust</i>"
-  :line5: "You may suffer 2 damage and"
-  :line6: "gain <b>Fatigue</b> to gain <b>+5 Attack</b>."
+  :line2: "You may discard up to 2 cards"
+  :line3: "to gain <b>+3 Attack</b> per card."
+  :line4: "<b>Combo</b>: <i>Exhaust</i>"
+  :line5: "Suffer 2 damage and gain"
+  :line6: "<b>Fatigue</b> to gain <b>+5 Attack</b>."
 
 # Squire - GREEN
 -
@@ -277,33 +277,33 @@
   :border_color: "#4d4"
   :line1: "Play when an ally is attacked."
   :line2: "You may become the target."
-  :line3: "<b>Block 1</b>"
-  :line4: "<b>Draw 1</b>"
-  :line5: "<b>Attack 1</b>"
-  :line6: "(target the attacking enemy)"
+  :line3: "<b>Block 1</b>, <b>Attack 1</b>, and <b>Draw 1</b>"
+  :line4: "(target the attacking enemy)"
+  :line5: "<b>Combo</b>: <i>Intervene</i>"
+  :line6: "<b>+2 Block</b> and <b>+2 Attack</b>"
 -
-  :deck: "Squirother"
-  :title: "Fetch"
+  :deck: "Squire"
+  :title: "Recover"
   :type: "Action"
   :icon: "rapidshare-arrow"
   :border_color: "#4d4"
   :line1: "<b>Restore All 1</b>"
-  :line2: ""
-  :line3: "Each player may place 1 of their"
-  :line4: "discarded cards (other than"
-  :line5: "<i>Fetch</i>) on top of its deck."
-  :line6: ""
+  :line2: "Each player may place 1 of their"
+  :line3: "discarded cards (other than"
+  :line4: "<i>Recover</i>) on top of its deck."
+  :line5: "<b>Combo</b>: <i>Deliver</i>"
+  :line6: "Put the card into hand instead."
 -
   :deck: "Squire"
   :title: "Resupply"
   :type: "Action"
   :icon: "knapsack"
   :border_color: "#4d4"
-  :line1: "Choose an ally to <b>Draw 2</b>."
+  :line1: "Target ally may <b>Draw 2</b>."
   :line2: "You may take another <b>Action</b>."
   :line3: "<i>once per round</i>"
-  :line4: ""
-  :line5: ""
+  :line4: "<b>Combo</b>: <i>Gather</i>"
+  :line5: "Target ally may <b>Refresh</b>."
   :line6: ""
 
 ## SET THREE
@@ -313,10 +313,10 @@
   :deck: "Juggernaut"
   :title: "Crush"
   :type: "Action"
-  :icon: "battle-axe" # TODO
+  :icon: "hammer-drop"
   :border_color: "#b10"
-  :line1: "<b>Attack 4</b>"
-  :line2: "This attack ignores <b>Block</b>."
+  :line1: "<b>Attack 3</b>"
+  :line2: ""
   :line3: ""
   :line4: "<b>Combo</b>: <i>Pulverize</i>"
   :line5: "<b>+4 Attack</b>"
@@ -325,45 +325,33 @@
   :deck: "Juggernaut"
   :title: "Endure"
   :type: "Reaction"
-  :icon: "battle-axe" # TODO
+  :icon: "rock-golem"
   :border_color: "#b10"
   :line1: "Play when you are attacked."
   :line2: "<b>Block 2</b>"
-  :line3: "If you have ≤ 5 HP, <b>+1 Block</b>."
+  :line3: "If you have ≤ 8 HP, <b>+1 Block</b>."
   :line4: "<b>Combo</b>: <i>Absorb</i>"
   :line5: "<b>Draw 2</b>"
   :line6: ""
 -
   :deck: "Juggernaut"
-  :title: "Focus"
+  :title: "Swig"
   :type: "Reaction"
-  :icon: "battle-axe" # TODO
+  :icon: "brandy-bottle"
   :border_color: "#b10"
   :line1: "Play at the start of your turn."
   :line2: "<b>Restore Self 1</b>"
   :line3: "<b>Draw 1</b>"
   :line4: "You may shuffle two of your"
   :line5: "discarded cards other than"
-  :line6: "<i>Focus</i> into their deck."
+  :line6: "<i>Swig</i> into their deck."
 
 # Jackknife - BLACK
 -
   :deck: "Jackknife"
-  :title: "TODO"
-  :type: "Action"
-  :icon: "battle-axe" # TODO
-  :border_color: "#ccc"
-  :line1: ""
-  :line2: ""
-  :line3: ""
-  :line4: ""
-  :line5: ""
-  :line6: ""
--
-  :deck: "Jackknife"
   :title: "Pierce"
   :type: "Action"
-  :icon: "battle-axe" # TODO
+  :icon: "flying-dagger"
   :border_color: "#ccc"
   :line1: "<b>Attack 1</b>"
   :line2: "<b>Draw 1</b>"
@@ -373,16 +361,28 @@
   :line6: "enemy gain <b>+1 Attack</b>."
 -
   :deck: "Jackknife"
+  :title: "Venomize"
+  :type: "Reaction"
+  :icon: "dripping-blade"
+  :border_color: "#ccc"
+  :line1: ""
+  :line2: ""
+  :line3: ""
+  :line4: ""
+  :line5: ""
+  :line6: ""
+-
+  :deck: "Jackknife"
   :title: "Reposition"
   :type: "Reaction"
-  :icon: "battle-axe" # TODO
+  :icon: "jump-across"
   :border_color: "#ccc"
-  :line1: "Play when you engage an enemy."
-  :line2: "<b>Draw 2</b>"
-  :line3: ""
+  :line1: "Play when you engage"
+  :line2: "an enemy."
+  :line3: "<b>Draw 2</b>"
   :line4: "<b>Combo</b>: <i>Trip</i>"
-  :line5: "<b>Stun</b> that enemy."
-  :line6: ""
+  :line5: "That enemy gains <b>-3 Attack</b>"
+  :line6: "this round."
 
 # Illusionist - BLUE
 -
@@ -429,12 +429,12 @@
   :type: "Action"
   :icon: "battle-axe" # TODO
   :border_color: "#4d4"
-  :line1: "Choose an enemy."
-  :line2: "The next attack on that enemy"
-  :line3: "gains <b>+4 Attack</b>."
-  :line4: "<b>Combo</b>: <i>Melt</i>"
-  :line5: "Remove all text from that"
-  :line6: "enemy if it is not elite."
+  :line1: "The next attack on target"
+  :line2: "enemy gains <b>+4 Attack</b>."
+  :line3: "<b>Combo</b>: <i>Melt</i>"
+  :line4: "<b>Tuck</b>: If this enemy is"
+  :line5: "not <i>Elite</i>, it has no"
+  :line6: "text or abilities."
 -
   :deck: "Apothecary"
   :title: "Heal"
@@ -442,7 +442,7 @@
   :icon: "battle-axe" # TODO
   :border_color: "#4d4"
   :line1: "<b>Restore 3</b>"
-  :line2: "The target discards a card."
+  :line2: "The target gains <b>Fatigue</b>."
   :line3: ""
   :line4: "<b>Combo</b>: <i>Envigorate</i>"
   :line5: "The target may <b>Draw 2</b>."
@@ -453,9 +453,9 @@
   :type: "Action"
   :icon: "battle-axe" # TODO
   :border_color: "#4d4"
-  :line1: "Discard a card."
-  :line2: "<b>Draw 2</b> <i>from other</i>"
-  :line3: "<i>players' decks</i>"
+  :line1: "Give an ally a card from"
+  :line2: "your hand, then"
+  :line3: "<b>Draw 2</b> <i>from their decks</i>."
   :line4: "You may take another <b>Action</b>."
   :line5: "<i>once per round</i>"
   :line6: ""
@@ -465,15 +465,15 @@
 # The Beast - RED
 -
   :deck: "The Beast"
-  :title: "Swipe"
+  :title: "Slash"
   :type: "Action"
   :icon: "triple-claws"
   :border_color: "#b10"
-  :line1: "<b>Attack 4</b> or <b>Attack All 2</b>"
-  :line2: ""
-  :line3: "<b>Combo</b>: <i>Cross Slash</i>"
-  :line4: "<b>Attack 3</b> or <b>Attack All 1</b>"
-  :line5: ""
+  :line1: "<b>Attack 3</b>"
+  :line2: "If the target does NOT have"
+  :line3: "<b>Block</b>, gain <b>+2 Attack</b>."
+  :line4: "<b>Combo</b>: <i>Swipe</i>"
+  :line5: "<b>Attack All 2</b>"
   :line6: ""
 -
   :deck: "The Beast"
@@ -481,11 +481,11 @@
   :type: "Action"
   :icon: "snout"
   :border_color: "#b10"
-  :line1: "<b>Restore Self 2</b>"
-  :line2: "Look at the top card of ANY"
-  :line3: "deck (including enemy deck)."
-  :line4: "<b>Combo</b>: <i>Lick</i>"
-  :line5: "<b>Draw 2</b>"
+  :line1: "<b>Scry 2</b>"
+  :line2: "<b>Draw 1</b>"
+  :line3: "<b>Restore Self 1</b>"
+  :line4: "<b>Combo</b>: <i>Scout</i>"
+  :line5: "All allies may <b>Scry 2</b>."
   :line6: ""
 -
   :deck: "The Beast"
@@ -507,12 +507,12 @@
   :type: "Action"
   :icon: "bee"
   :border_color: "#ccc"
-  :line1: "<b>Attack 2</b>"
-  :line2: "<b>Tuck</b>: At the start of each round"
-  :line3: "this enemy suffers 2 damage."
+  :line1: "<b>Attack 3</b>"
+  :line2: "<b>Tuck</b>: At the end of each round,"
+  :line3: "this enemy suffers 1 damage."
   :line4: "<b>Combo</b>: <i>Swarm</i>"
-  :line5: "<b>Tuck</b>: This enemy has <b>-1 Attack</b>"
-  :line6: "and loses all <b>Block</b>."
+  :line5: "<b>Tuck</b>: Ignore all <b>Block</b> and"
+  :line6: "<b>Hunter</b> abilities on this enemy."
 -
   :deck: "Swarmkeeper"
   :title: "Mosquito / Bite"
