--- a/data/tairos/races.yml
+++ b/data/tairos/races.yml
@@ -1,51 +1,52 @@
 # TODO: Need custom layout for Races
 # There is too much content...
 # Maybe two-sided layout?
+# => Setup on one side; Passive/Action on the other
 -
   :deck: "Race"
   :title: "Human"
   :type: "Race"
   :icon: "person"
   :border_color: "#81e"
-  :line1: "<i>Racial Bonus</i>: +2 <b>Inspiratiaon</b>"
-  :line2: "When you spend <b>Inspiration</b>,"
-  :line3: "give an ally 1 <b>Inspiration</b>."
-  :line4: "<i>Reaction</i> -  1 Charge"
-  :line5: "Discard a card to trigger the"
-  :line6: "<b>Combo</b> of a card you play."
+  :line1: "<i>Game Start</i>: <b>Draw 1</b>, <b>Charge 1</b>"
+  :line2: "<i>Passive</i>"
+  :line3: "After you <b>Combo</b>, <b>Charge 1</b>."
+  :line4: "<i>Free Action</i> -  1 Charge"
+  :line5: "<b>Draw 1</b> then <b>Discard 1</b>"
+  :line6: "<i>once per turn</i>"
 -
   :deck: "Race"
   :title: "Elf"
   :type: "Race"
   :icon: "woman-elf-face"
   :border_color: "#81e"
-  :line1: "<i>Racial Bonus</i>: +2 <b>Charges</b>"
-  :line2: "Your max hand size is 8."
-  :line3: "<i>Free Action</i> - 1 Charge"
-  :line4: "Look at the top card of"
-  :line5: "one of your decks. Put it back"
-  :line6: "on top or bottom of the deck."
+  :line1: "<i>Game Start</i>: <b>Charge 2</b>"
+  :line2: "<i>Passive</i>"
+  :line3: "+1 max hand size"
+  :line4: "<i>Free Action</i> - 1 Charge"
+  :line5: "<b>Scry 1</b>"
+  :line6: "<i>once per turn</i>"
 -
   :deck: "Race"
   :title: "Dwarf"
   :type: "Race"
   :icon: "dwarf-face"
   :border_color: "#81e"
-  :line1: "<i>Racial Bonus</i>: +4 <b>Health</b>"
-  :line2: "<b>Inspiration</b> may be used to"
-  :line3: "prevent 2 damage."
-  :line4: "<i>Reaction</i> - 1 Charge"
-  :line5: "Prevent 1 <b>Stun</b> from being"
-  :line6: "applied to you."
+  :line1: "<i>Game Start</i>: <b>+4 Health</b>"
+  :line2: "<i>Passive</i>"
+  :line3: "You cannot be stunned or fatigued."
+  :line4: "<i>Free Action</i> - 1 Charge"
+  :line5: "<b>+1 Attack</b> or <b>+1 Block</b>"
+  :line6: "<i>once per turn</i>"
 -
   :deck: "Race"
   :title: "Halfling"
   :type: "Race"
   :icon: "cement-shoes"
   :border_color: "#81e"
-  :line1: "<i>Racial Bonus</i>: +1 starting card"
-  :line2: "After refreshing a deck, draw 1."
-  :line3: "<i>Reaction</i> - 1 Charge"
-  :line4: "If you are targeted by a <b>Hunter</b>,"
-  :line5: "chose an ally to be targeted"
-  :line6: "this round instead."
+  :line1: "<i>Game Start</i>: <b>Draw 2</b>"
+  :line2: "<i>Passive</i>"
+  :line3: "After refreshing a deck, <b>Draw 1</b>."
+  :line4: "<i>Free Action</i> - 1 Charge"
+  :line5: "Swap places with an ally."
+  :line6: "<i>once per turn</i>"
